# obj2voxel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.adoc  README.md  build.sh  format.sh  io.cpp  io.hpp  main.cpp  make-symlinks.sh  rebuild-native.sh  svo.hpp  triangle.hpp  util.hpp  voxelization.cpp  voxelization.hpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml  linux.yml  windows.yml
include/: obj2voxel.h
src/: arrayvector.hpp  constants.hpp  filevoxelization.cpp  filevoxelization.hpp  io.cpp  io.hpp  main.cpp  obj2voxel.cpp  ringbuffer.hpp  threading.hpp  triangle.hpp  util.hpp  voxelization.cpp  voxelization.hpp
test/: CMakeLists.txt  main.cpp  testutil.hpp
